--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -36,9 +36,15 @@ spec:
             cpu: 100m
             memory: 20Mi
         ports:
-        - containerPort: 80
+        - name: http
+          containerPort: 80
           hostPort: 80
-        - containerPort: 8080
+        - name: https
+          containerPort: 443
+          hostPort: 443
+        - name: admin
+          containerPort: 8080
         args:
+        - -d
         - --web
         - --kubernetes
