--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -26,7 +26,7 @@ spec:
       serviceAccountName: traefik-ingress-controller
       terminationGracePeriodSeconds: 60
       containers:
-      - image: traefik:v1.3.0
+      - image: "traefik:${TRAEFIK_VERSION}"
         name: traefik-ingress-lb
         resources:
           limits:
