--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -10,7 +10,12 @@ spec:
   selector:
     k8s-app: traefik-ingress-lb
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 443
   type: LoadBalancer
