--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -45,12 +45,13 @@ spec:
         - name: admin
           containerPort: 8080
         args:
-        - -d
         - --kubernetes
         - --configFile=/etc/traefik/traefik.toml
         volumeMounts:
         - name: traefik-config
           mountPath: /etc/traefik
+        - name: traefik-volume
+          mountPath: /data/traefik
       volumes:
       - name: traefik-config
         configMap:
@@ -58,3 +59,6 @@ spec:
           items:
           - key: traefik.toml
             path: traefik.toml
+      - name: traefik-volume
+        persistentVolumeClaim:
+          claimName: traefik-volume
