--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -14,6 +14,11 @@ metadata:
     k8s-app: traefik-ingress-lb
 spec:
   replicas: 1
+  revisionHistoryLimit: 5
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 0
   selector:
     matchLabels:
       k8s-app: traefik-ingress-lb
