--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -2,16 +2,16 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: traefik-ingress-controller
-  namespace: kube-system
+  name: "${K8S_NAME}"
+  namespace: "${K8S_NAMESPACE}"
 ---
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: traefik-ingress-controller
-  namespace: kube-system
+  name: "${K8S_NAME}"
+  namespace: "${K8S_NAMESPACE}"
   labels:
-    k8s-app: traefik-ingress-lb
+    k8s-app: "${K8S_APP}"
 spec:
   replicas: 1
   revisionHistoryLimit: 5
@@ -21,25 +21,25 @@ spec:
       maxUnavailable: 0
   selector:
     matchLabels:
-      k8s-app: traefik-ingress-lb
+      k8s-app: "${K8S_APP}"
   template:
     metadata:
       labels:
-        k8s-app: traefik-ingress-lb
-        name: traefik-ingress-lb
+        k8s-app: "${K8S_APP}"
+        name: "${K8S_APP}"
     spec:
-      serviceAccountName: traefik-ingress-controller
+      serviceAccountName: "${K8S_NAME}"
       terminationGracePeriodSeconds: 60
       containers:
-      - image: "traefik:${TRAEFIK_VERSION}"
-        name: traefik-ingress-lb
+      - image: "${TRAEFIK_IMAGE}:${TRAEFIK_VERSION}"
+        name: "${K8S_APP}"
         resources:
           limits:
             cpu: 200m
-            memory: 30Mi
+            memory: 50Mi
           requests:
             cpu: 100m
-            memory: 20Mi
+            memory: 30Mi
         ports:
         - name: http
           containerPort: 80
