--- a/deploy/volume.yaml
+++ b/deploy/volume.yaml
@@ -8,7 +8,7 @@ metadata:
     volume.beta.kubernetes.io/storage-class: slow
 spec:
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
