Deploy kubernetes to a cluster of choice
Removed the branch dependencies for build and set
the ace dev as the default cluster when commiting

--- a/deploy/volume.yaml
+++ b/deploy/volume.yaml
@@ -8,7 +8,7 @@ metadata:
     volume.beta.kubernetes.io/storage-class: slow
 spec:
   accessModes:
-  - ReadWriteMany
+  - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
