--- a/deploy/configmap.yaml
+++ b/deploy/configmap.yaml
@@ -36,6 +36,9 @@ data:
 
     [web]
     address = ":8080"
-
+    
+    [accessLog]
+    format = "json"
+     
     [web.metrics.prometheus]
     Buckets=[0.1,0.3,1.2,5.0]
