Added HTTP-01 support for traefik

--- a/deploy/configmap.yaml
+++ b/deploy/configmap.yaml
@@ -26,6 +26,8 @@ data:
 
     [acme]
     acmeLogging = true
+      [acme.httpChallenge]
+      entryPoint = "http"
 
     email = "${ACEME_EMAIL}"
     storageFile = "/data/traefik/acme.json"
