Added recreate for the deployment

--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -16,9 +16,7 @@ spec:
   replicas: 1
   revisionHistoryLimit: 5
   strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 0
+    type: Recreate
   selector:
     matchLabels:
       k8s-app: "${K8S_APP}"
