--- a/deploy/storageclass.yaml
+++ b/deploy/storageclass.yaml
@@ -1,8 +1,9 @@
 kind: StorageClass
-apiVersion: storage.k8s.io/v1beta1
+apiVersion: storage.k8s.io/v1
 metadata:
  name: slow
  namespace: "${K8S_NAMESPACE}"
 provisioner: kubernetes.io/azure-disk
 parameters:
- skuName: Standard_LRS
+  storageaccounttype: Standard_LRS
+  kind: Dedicated
